--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.22.0",
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
@@ -42,6 +44,7 @@
     "react-router-dom": "^6.0.2",
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
+    "stripe": "^8.197.0",
     "style-loader": "^3.2.1",
     "styled-components": "^5.3.3",
     "ts-loader": "^9.2.5",
